# chess-plusplus

./: .clang-format  .gitignore  CMakeLists.txt
src/: game.cpp  game.hpp  generators.cpp  generators.hpp  magic.cpp  magic.hpp  magicsr.data  main.cpp  masks.hpp  utils.hpp
src/core/: game.cpp  game.hpp  generation.cpp  generation.hpp  generators.cpp  generators.hpp  magic.cpp  magic.hpp  notation.cpp  notation.hpp  representation.cpp  representation.hpp  types.cpp  types.hpp
src/core/generators/: generators.cpp  generators.hpp  helpers.cpp  helpers.hpp  kings.cpp  knights.cpp  magic.cpp  magic.hpp  pawns.cpp  piecewise.hpp  sliders.cpp
src/core/generators/magic/: magic.cpp  magic.hpp  magicsb.data  magicsr.data
src/core/generators/piecewise/: kings.cpp  knights.cpp  pawns.cpp  piecewise.hpp  sliders.cpp
src/core/magic/: magic.cpp  magic.hpp
src/core/representation/: board.cpp  enums.hpp  representation.cpp  representation.hpp  types.hpp
src/core/tests/: cases.toml  tests.cpp
src/utils/: masks.hpp  utils.hpp
